@@ -10,18 +10,22 @@ datadir=@datadir@/rdup
 source $datadir/shared.sh
 
 usage() {
-        echo "$PROGNAME -b DIR [OPTIONS] DIR [DIR ...]"
+        echo "$PROGNAME SOURCE [SOURCE ...] DIR"
         echo
         echo "This is a wrapper around rdup and rdup-cp"
-        echo DIR \ - directories to restore
+        echo DIR \ - directory to restore to
+        echo SOURCE \ - source to restore from:
+	echo "  ssh://user@host/directory (note: no colon after the hostname"
+        echo "  file:///directory (note: 3 slashes)"
+        echo "  /directory"
+        echo "  directory"
         echo
         echo OPTIONS:
-        echo " -b DIR     restore to this directory"
-        echo " -c REMOTE  restore the backup from a remote machine with ssh"
         echo " -k KEYFILE decrypt all files, using rdup-crypt"
+        echo " -z         decompress all files, using rdup-gzip"
+        echo "            If both -z and -k are selected, decryption is done first"
         echo " -S         rdup-snapshot restore (does not use rdup -E)"
         echo " -D         rdup-dump restore (does use rdup -E), default"
-        echo " -z         decompress all files, using rdup-gzip"
         echo " -a         use extended attributes with uid/gid"
         echo " -v         echo the files processed to stderr"
         echo " -x         pass -x to rdup"
@@ -31,18 +35,13 @@ usage() {
 
 PROGNAME=$0
 BACKUPDIR=""
+c=""
 pipe=""
-zip=false
 ssh=""
+zip=false
 dump=true
-while getopts ":ab:k:c:vzxhSDV" o; do
+while getopts ":ak:vzxhSDV" o; do
         case $o in
-                b) BACKUPDIR="$OPTARG"
-                if [[ -z "$OPTARG" ]]; then
-                        _echo2 "-b needs an argument"
-                        exit 1
-                fi
-                ;;
                 k) KEYFILE=$OPTARG
                 if [[ -z "$OPTARG" ]]; then
                         _echo2 "-k needs an argument"
@@ -63,15 +62,6 @@ while getopts ":ab:k:c:vzxhSDV" o; do
                 dump=true;;
                 S)
                 dump=false;;
-                c)
-                if [[ -z $OPTARG ]]; then
-                        _echo2 "-c needs an argument"
-                        exit 1
-                fi
-                ssh=" ssh -x $OPTARG"
-                c="-c"
-                l=""
-                ;;
                 z) pipe="$pipe | @bindir@/rdup-gzip -d"
                 c="-c"
 		zip=true
@@ -86,13 +76,69 @@ while getopts ":ab:k:c:vzxhSDV" o; do
 done
 shift $((OPTIND - 1))
 if [[ $# -eq 0 ]]; then
-        _echo2 "No directories to restore"
-        exit 1
+	usage
+        exit
 fi
-if [[ -z "$BACKUPDIR" ]]; then
-        _echo2 "The -b argument is mandatory"
-        exit 1
-fi
+
+# rdup [options] sources destination
+#dest="ssh://elektron.atoom.net/directory"
+#dest="ssh://elektron.atoom.net/directory/var/"
+#dest="file:///var/backup"
+#dest="/var/backup"
+#dest="ssh://miekg@elektron.atoom.net/directory"
+
+# look through the source dirs
+# either one ssh:// or all local is allowed
+echo $@
+i=1; last=$#; SOURCE=
+ssh_seen=false
+while [[ $i -lt $last ]]; do
+	src=$1
+	echo "s $src"
+	if [[ ${src:0:6} == "ssh://" ]]; then
+		if $ssh_seen; then
+			_echo2 "Sorry; there can only be one remote source"
+			exit 1
+		fi
+
+		rest=${src/ssh:\/\//}
+		u=`echo $rest | cut -s -f1 -d@`
+		rest=${rest/$u@/}
+		h=`echo $rest | cut -s -f1 -d/`
+
+		c="-c"
+		l=""     # enable race checking
+		ssh_seen=true
+		if [[ -z $u ]]; then
+			ssh=" ssh -x $h"
+		else
+			ssh=" ssh -x $u@$h"
+		fi
+		SOURCE=${rest/$h/}
+	fi
+	if [[ ${src:0:7} == "file://" ]]; then
+		if $ssh_seen; then
+			_echo2 "Sorry; a remote source has been specified"
+			exit 1
+		fi
+		rest=${src/file:\/\//}
+		SOURCE="$SOURCE $rest"
+	fi
+	if [[ ${src:0:1} == "/" ]]; then
+		if $ssh_seen; then
+			_echo2 "Sorry; a remote source has been specified"
+			exit 1
+		fi
+		SOURCE="$SOURCE $src"
+	fi
+
+	# relative dirs
+	shift
+	((i=$i+1))
+done
+dest=$1
+
+echo S $SOURCE
 
 # add pwd if the path was relative
 if [[ ${1:0:1} == "/" ]]; then
@@ -112,13 +158,12 @@ else
 fi
 # create the command line
 if [[ -z $ssh ]]; then
-        pipe="$pipe | @bindir@/rdup-cp $c $OPT $BACKUPDIR/$NOW"
+        pipe="$pipe | @bindir@/rdup-cp $c $OPT $dest"
 else
-        pipe="$pipe | $ssh rdup-cp $c $OPT $BACKUPDIR/$NOW"
+        pipe="$pipe | $ssh rdup-cp $c $OPT $dest"
 fi
-cmd="@bindir@/rdup $r $x $l $c /dev/null $@ $pipe"
+cmd="@bindir@/rdup $r $x $l $c /dev/null $SOURCE $pipe"
 
 # execute the backup command
-#_echo2 "Executing: ${cmd}"
-eval ${cmd}
-exit 0
+_echo2 "Executing: ${cmd}"
+#eval ${cmd}
